# GTest

./: .gitignore  CMakeLists.txt  README.md  failed.txt  run_mutation_testing.sh  test  tests.cpp  tests.cu  whattotest.cpp  whattotest.cu
mut/mut0/: output.txt  test  whattotest.cu
mut/mut1/: output.txt  result.txt  test  whattotest.cu
mut/mut10/: output.txt  test  whattotest.cu
mut/mut11/: output.txt  test  whattotest.cu
mut/mut12/: output.txt  test  whattotest.cu
mut/mut13/: output.txt  test  whattotest.cu
mut/mut14/: output.txt  test  whattotest.cu
mut/mut2/: output.txt  test  whattotest.cu
mut/mut3/: whattotest.cu
mut/mut4/: whattotest.cu
mut/mut5/: whattotest.cu
mut/mut6/: output.txt  test  whattotest.cu
mut/mut7/: output.txt  test  whattotest.cu  whattotest.cuh
mut/mut8/: output.txt  test  whattotest.cu
mut/mut9/: output.txt  test  whattotest.cu
mut0/: test  whattotest.cu
original/: test
